--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,8 @@ local.properties
 node_modules/
 npm-debug.log
 yarn-error.log
-
+android/
+ios/
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
